--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,4 +28,6 @@ jobs:
           context: .
           file: ./docker/Dockerfile
           push: true
-          tags: ghcr.io:${{ github.repository_owner }}/${{ github.event.repository.name }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
