--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,8 @@ jobs:
       name: production
     env:
       SERVER_IP: '128.140.34.138'
+      COMPOSE_PROJECT_NAME: shopware
+      COMPOSE_FILE: docker-compose.prod.yml
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -63,9 +65,10 @@ jobs:
         run: docker pull ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
 
       - name: Start Services
-        run: docker compose -f docker-compose.prod.yml up -d
+        run: docker compose up -d
         env:
           APP_SECRET: ${{ secrets.APP_SECRET }}
           INSTANCE_ID: ${{ secrets.INSTANCE_ID }}
           JWT_PRIVATE_KEY: ${{ secrets.JWT_PRIVATE_KEY }}
           JWT_PUBLIC_KEY: ${{ secrets.JWT_PUBLIC_KEY }}
+          MYSQL_PASSWORD: ${{ secrets.JWT_PUBLIC_KEY }}
