--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,7 +65,9 @@ jobs:
         run: docker pull ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
 
       - name: Start Services
-        run: docker compose up -d
+        run: |
+          docker compose up -d init
+          docker compose up -d
         env:
           APP_SECRET: ${{ secrets.APP_SECRET }}
           INSTANCE_ID: ${{ secrets.INSTANCE_ID }}
