--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,6 +66,7 @@ jobs:
 
       - name: Start Services
         run: |
+          export MYSQL_PASSWORD=$(php -r 'echo rawurlencode($_SERVER["MYSQL_PASSWORD"]);')
           docker compose up -d init
           docker compose up -d
         env:
