--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,7 +11,7 @@ x-app: &app
     APP_SECRET: '${APP_SECRET}'
     JWT_PRIVATE_KEY: '${JWT_PRIVATE_KEY}'
     JWT_PUBLIC_KEY: '${JWT_PUBLIC_KEY}'
-    APP_URL: http://localhost
+    APP_URL: http://localhost:8000
     DATABASE_HOST: db
     DATABASE_URL: mysql://shopware:${MYSQL_PASSWORD_ESCAPED}@db/shopware
 
