chore: update packages

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "composer-runtime-api": "^2.0",
         "frosh/lazy-sizes": "^2.0",
-        "frosh/production-docker": "^0.1.0",
+        "shopware/docker": "^0.1.0",
         "frosh/tools": "^1.0",
         "shopware/administration": "~v6.5.0",
         "shopware/core": "~v6.5.0",
