--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@
 
 # pin versions
 FROM ghcr.io/shopware/docker-base:8.2 as base-image
-FROM ghcr.io/friendsofshopware/shopware-cli:0.4.2-php-8.2 as shopware-cli
+FROM ghcr.io/friendsofshopware/shopware-cli:0.4.3-php-8.2 as shopware-cli
 
 # build
 
@@ -14,6 +14,7 @@ WORKDIR /src
 RUN --mount=type=secret,id=composer_auth,dst=/src/auth.json \
     --mount=type=cache,target=/root/.composer \
     --mount=type=cache,target=/root/.npm \
+    --mount=type=cache,target=/root/.bun \
     /usr/local/bin/entrypoint.sh shopware-cli project ci /src
 
 # build final image
