feat: use github actions to build the project

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,10 @@
             "symfony/runtime": true
         },
         "optimize-autoloader": true,
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "8.2.1"
+        }
     },
     "scripts": {
         "auto-scripts": {
