--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,35 +17,46 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-        
       - name: Login into Github Docker Registery
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Cache /root/.composer
+      - name: Install Shopware-CLI
+        uses: FriendsOfShopware/shopware-cli-action@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Install Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
+      
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+      
+      - name: Get Composer Cache Directory
+        id: composer-cache
+        run: |
+          echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache Composer
+        id: composer
         uses: actions/cache@v3
         with:
-          path: composer-cache
-          key: composer-cache-${{ hashFiles('composer.lock') }}
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
 
-      - name: Inject Composer Cache
-        uses: reproducible-containers/buildkit-cache-dance@v2.1.3
-        with:
-          cache-source: composer-cache
-          cache-target: /root/.composer
+      - name: Set composer vars
+        run: |
+          echo "COMPOSER_DISABLE_NETWORK=${{ steps.composer.outputs.cache-hit && '1' || '0'  }}" >> "$GITHUB_ENV"
+          echo "COMPOSER_NO_AUDIT=1" >> "$GITHUB_ENV"
+          echo "COMPOSER_ROOT_VERSION=1.0.0" >> "$GITHUB_ENV"
 
-      - name: Cache /root/.bun
-        uses: actions/cache@v3
-        with:
-          path: bun-cache
-          key: bun-cache-${{ hashFiles('composer.lock') }}
-  
-      - name: Inject Composer Cache
-        uses: reproducible-containers/buildkit-cache-dance@v2.1.3
-        with:
-          cache-source: bun-cache
-          cache-target: /root/.bun
+      - name: Build project
+        run: shopware-cli project ci .
 
       - name: Build and push
         uses: docker/build-push-action@v4
