--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,59 +12,9 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Login into Github Docker Registery
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
-      - name: Install Shopware-CLI
-        uses: FriendsOfShopware/shopware-cli-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Install Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-      
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
-      
-      - name: Get Composer Cache Directory
-        id: composer-cache
-        run: |
-          echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
-
-      - name: Cache Composer
-        id: composer
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-composer-
-
-      - name: Set composer vars
-        run: |
-          echo "COMPOSER_DISABLE_NETWORK=${{ steps.composer.outputs.cache-hit && '1' || '0'  }}" >> "$GITHUB_ENV"
-          echo "COMPOSER_NO_AUDIT=1" >> "$GITHUB_ENV"
-          echo "COMPOSER_ROOT_VERSION=1.0.0" >> "$GITHUB_ENV"
-
-      - name: Build project
-        run: shopware-cli project ci .
-
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./docker/Dockerfile
-          push: true
-          tags: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
+    uses: shopware/github-actions/.github/workflows/build-docker-image.yml@main
+    secrets:
+      ghToken: ${{ secrets.GITHUB_TOKEN }}
 
   # deploy:
   #   needs: build
