--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     uses: shopware/github-actions/.github/workflows/build-docker-image.yml@main
     with:
-      disable-bun: true
+      bun-version: '1.0.22'
     secrets:
       ghToken: ${{ secrets.GITHUB_TOKEN }}
 
