--- a/composer.json
+++ b/composer.json
@@ -3,15 +3,13 @@
     "type": "project",
     "require": {
         "composer-runtime-api": "^2.0",
-        "frosh/lazy-sizes": "^2.0",
         "shopware/docker": "^0.1.0",
-        "frosh/tools": "^1.0",
-        "shopware/administration": "~v6.5.0",
-        "shopware/core": "~v6.5.0",
-        "shopware/elasticsearch": "~v6.5.0",
-        "shopware/storefront": "~v6.5.0",
+        "shopware/administration": "*",
+        "shopware/core": "~v6.6.0",
+        "shopware/elasticsearch": "*",
+        "shopware/storefront": "*",
         "symfony/flex": "~2",
-        "symfony/runtime": "^5.0|^6.0"
+        "symfony/runtime": "^5.0|^6.0|^7.0"
     },
     "repositories": [
         {
